<resources>
    <!-- Application Strings-->
    <string name="app_name">Easy Trim</string>
    <string name="app_version">1.0</string>
    <!-- General Strings-->
    <string name="initial_speed">0.0 m/s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unavailable_service">Service Unavailable</string>
    <string name="standby">Standby</string>
    <string name="shortcut_disabled_message">Shortcut is Unavailable</string>
    <string name="trim_shortcut_long_label">Boat Trim View</string>
    <string name="trim_shortcut_short_label">Trim View</string>
    <string name="calib_shortcut_long_label">Calibrate Boat Trim</string>
    <string name="calib_shortcut_short_label">Calibrate</string>


    <!-- Measurement Units -->
    <string name="units_title">Units</string>
    <string name="str_units_knots"> knots</string>
    <string name="str_units_kilometers_hour"> km/h</string>
    <string name="str_units_miles_hour"> mph</string>
    <string name="str_units_meters_second"> m/s</string>
    <string name="str_units_degrees"> \u00b0</string>
    <string name="gauge_title_speed">SPEED</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="settings_title">Settings</string>

    <!-- Settings: General -->
    <string name="pref_category_title_general">General</string>
    <string name="pref_title_measurement_units">Select Measurement Units</string>
    <string-array name="pref_unit_list_titles">
        <item>Nautical Miles</item>
        <item>Kilometers</item>
        <item>Miles</item>
        <item>Meters</item>
    </string-array>
    <string-array name="pref_unit_list_values">
        <item>NM</item>
        <item>KM</item>
        <item>MI</item>
        <item>ME</item>
    </string-array>
    <string name="pref_title_calibrate">Calibrate</string>
    <string name="pref_body_calibrate">Recalibrate your boat\'s trim</string>
    <string name="pref_title_database">Trim Data</string>
    <string name="pref_body_database">View your calibrated trim data</string>

    <!-- Settings: About -->
    <string name="pref_category_title_about">About</string>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_git">Git Repository</string>
    <string name="pref_body_git">Access the source code</string>
    <string name="pref_title_donate">Donate</string>
    <string name="pref_body_donate">Support the development of the application</string>
    <string name="pref_title_version">Version</string>
    <string name="detecting_speed">Detecting speed…</string>

    <!-- Snack bar Strings -->
    <string name="snack_fail">Trim not recorded</string>
    <string name="snack_fail_action">Try Again</string>
    <string name="welcome_body">Easy Trim will help you to see what adjustments you need to make to your boat\'s trim angle.</string>
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_btn_setup">GET STARTED</string>
    <string name="details_title">Information</string>
    <string name="details_title_body">Let\'s get some information to help us make some better calculations</string>
    <string name="max_speed_hint_text">100</string>
    <string name="mount_device">Mount Device</string>
    <string name="mount_device_body">Mount your device onto a stable stand to ensure that you are getting accurate values.</string>
    <string name="calibrate_device_title">Calibrate Device</string>
    <string name="calibrate_device_body">Accelerate to the indicated target speeds and click the button to record your trim data.</string>
    <string name="stat_view_data">VIEW DATA</string>
    <string name="current_condition_stat">CURRENT CONDITION</string>
    <string name="units_stat">UNITS</string>
    <string name="top_speed_stat">TOP SPEED</string>
    <string name="calibration_complete">Calibration Complete</string>
    <string name="pending_targetSpeed">Pending Request</string>
    <string name="targetSpeed_title">Target Speed to Calibrate:</string>
    <string name="view_home">View</string>
    <string name="data_placeholder_none">No data</string>
    <string name="info_title_units">Units</string>
    <string name="info_title_condition">Condition</string>
    <string name="info_title_maxSpeed">Maximum Speed</string>

    <!-- Stepper Details: Units -->
    <string-array name="details_units">
        <item>Nautical Miles</item>
        <item>Kilometers</item>
        <item>Miles</item>
        <item>Meters</item>
    </string-array>

    <!-- Stepper Details: Weather Conditions -->
    <string-array name="conditions">
        <item>Sunny</item>
        <item>Light Wind</item>
        <item>Strong Wind</item>
        <item>Storm</item>
    </string-array>

</resources>
