<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_category_title_general">

        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
             dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
        <ListPreference
            android:defaultValue="NM"
            android:entries="@array/pref_unit_list_titles"
            android:entryValues="@array/pref_unit_list_values"
            android:key="units_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/units_title" />

        <Preference
            android:summary="@string/pref_body_calibrate"
            android:title="@string/pref_title_calibrate">
            <!--<intent-->
                <!--android:action="android.intent.action.MAIN"-->
                <!--android:targetClass="com.example.foo.SomeActivity"-->
                <!--android:targetPackage="com.example.foo" />-->
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_title_about">

        <Preference
            android:summary="@string/pref_body_git"
            android:title="@string/pref_title_git">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/keegangeorge/EasyTrim.git" />
        </Preference>


        <Preference
            android:summary="@string/pref_body_donate"
            android:title="@string/pref_title_donate">
            <!--<intent android:action="android.settings.SYNC_SETTINGS" />-->
        </Preference>


        <Preference
            android:summary="@string/app_version"
            android:title="@string/pref_title_version">
            <!--<intent android:action="android.settings.SYNC_SETTINGS" />-->
        </Preference>

    </PreferenceCategory>


</PreferenceScreen>
