<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/welcome_title"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                android:gravity="center"
                android:text="@string/welcome_body"
                android:textAlignment="center"
                android:textColor="#a8c9ff" />

            <!-- LAYOUT MARGIN TOP ON BUTTON IS TEMPORARY-->
            <Button
                android:id="@+id/btnWelcomeSetup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginTop="150dp"
                android:backgroundTint="#FFFFFF"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:text="@string/welcome_btn_setup"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>