<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calibration_linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalibrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/targetSpeed_title"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/calibration_target_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pending_targetSpeed"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@color/colorPrimary" />


            <fragment
                android:id="@+id/fragment"
                android:name="com.kgeor.easytrim.Speedometer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/set_trim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible"
                app:lottie_autoPlay="false"
                app:lottie_fileName="BTN_SUCCESS.json"
                app:lottie_loop="false" />

            <Button
                android:id="@+id/calibration_complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="5dp"
                android:backgroundTint="@color/colorPrimary"
                android:paddingBottom="20dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:text="@string/calibration_complete"
                android:textColor="@color/white" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>