<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    tools:context=".StatsActivity">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#eaf2ff">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingEnd="50dp"
            android:paddingStart="20dp"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_speed_stat"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/top_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="50 KNOTS"
                android:textSize="13sp" />


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="10dp"
        android:backgroundTint="#eaf2ff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingEnd="50dp"
            android:paddingStart="20dp"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/units_stat"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/unit_stat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NAUTICAL MILES"
                android:textSize="13sp" />


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#eaf2ff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingEnd="50dp"
            android:paddingStart="20dp"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_condition_stat"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/condition_stat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sunny"
                android:textSize="13sp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>


    <Button
        android:id="@+id/btnViewDataStat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorPrimary"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:paddingEnd="50dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:text="@string/stat_view_data"
        android:textColor="@color/white" />


</LinearLayout>